# llm-rag-system

./: Makefile  README.md  README.zh-CN.md  ablation.csv  data_schema.md  experiments.csv  pyproject.toml  run.sh
badcases/: error_analysis.csv
data/: corpus.jsonl  queries.jsonl
docs/: algorithm.md  architecture.md  ci_workflow_template.yml  dev_log.md  experiments.md  interview-notes.md  roadmap.md  source-reading.md
evidence_pack/: 01_project_overview.md  02_data_schema.md  03_metric_definition.md  04_experiments.csv  05_ablation.csv  06_badcases.csv  07_run_commands.md  08_boundary_statement.md  09_interview_whiteboard.md
src/hybrid_rag_lab/: __init__.py  bm25.py  cli.py  data.py  dense.py  evaluate.py  fusion.py  pipeline.py  rerank.py  rewrite.py  text.py
tests/: test_pipeline.py  test_schema_and_labels.py
